style.css
::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}
html,
body {
  position: relative;
  margin: 0;
  padding: 0;
  overflow: auto;
  scroll-behavior: smooth;
}

header {
  padding: 2em;
  box-sizing: border-box;
  position: relative;
  -webkit-transform-style: inherit;
  transform-style: inherit;
  width: 100vw;
}
header,
header:before {
  background: 50% 50% / cover;
}
header::before {
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  display: block;
  background-image: url(asset/background_new.jpg);
  background-size: cover;
  -webkit-transform-origin: center center 0;
  -webkit-transform: translateZ(-1px) scale(2);
  transform-origin: center center 0;
  transform: translateZ(-1px) scale(2);
  z-index: -1;
  min-height: 100vh;
}
header * {
  font-weight: normal;
  text-align: center;
  margin: 0;
  padding: 1em 0;
}
main {
  background-color: hsl(60, 10%, 10%);
  line-height: 1.7;
  max-width: 32em;
  padding: 5% calc(50% - 16em) 35%;
  position: relative;
  z-index: 2;
}

html {
  background-color: whitesmoke;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 100%;
  overflow: hidden;
  scroll-behavior: smooth;
}
body {
  color: whitesmoke;
  text-align: center;
  margin: 0;
  padding: 0;
  -webkit-perspective: 1px;
  perspective: 1px;
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  height: 100vh;
  max-height: 100vh;
  overflow-x: hidden;
}
.entire {
  height: 100%;
  width: 100%;
}
header {
  text-align: left;
  padding-left: 0;
}
header h1 {
  font-size: 24px;
  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
}
.logo {
  width: 200px;
  margin-top:-1em;
  margin-left:2em;
  height: auto;
}
.menu{
  position: absolute;
  width: 200px;
  right: 2em;
  top: 1em;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}
.menu a{
  text-decoration: none;
  color: whitesmoke;
}
.logo1{
  display:none;
}
.topCenter {
  position: absolute;
  width: 100%;
}
.center{
  display: flex;
  margin-top: -2em;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.TCdef {
  height:300px;
  padding: 2em;
  width: 350px;
  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
}
.TCdef h1 {
  font-size: 225%;
}
.TCwords h2{
  margin-bottom: -.2em;
}
.TCwords {
  text-align: center;
  height:300px;
  margin-top: 0;
  padding: 2em;
  width: 350px;
  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
}
.TCwords h1{
  font-size: 225%;
}
.TCwords h3 {
  text-align: center;
  margin-top: -1em;
  height: auto;
  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
  letter-spacing: 2px;
  margin-bottom: -1.5em;
}
.TCwords h4 {
  margin-bottom: 2em;
}

.business{
  margin-bottom:0;
}
.vl {
  margin-top:7em;
  border-left: 6px solid whitesmoke;
  border-radius: 10px;
  height: 300px;
}
#adj {
  margin-bottom: -2em;
}
.motion {
  width: 100%;
  display: flex;
  justify-content: center;
  text-align: center;
  color: rgb(255, 153, 0);
}
.motion h2 {
  padding: 1.5em;
}
.button img {
  width: 50px;

}

.button img:hover {
  transform: scale(1.1);
}
.smoothScroll {
  color: black;
  scroll-behavior: smooth;
}
a {
  scroll-behavior: smooth;
}
.container{
  margin-left: 5rem;
  margin-right: 5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: 110%;
}
#about {
  position: relative;
  height: 100%;
  margin-top: 10%;
  padding-top: 1em;
  display:flex;
  flex-direction: row;
  align-content: stretch;
  align-items: top;
  color: black;
  width: 85%;
  align-self: anchor-center;
}
#services {
  position: relative;
  height: 100%;
  padding-top: 1em;
  display:flex;
  flex-direction: row;
  align-items: top;
  align-content: stretch;
  color: black;
  width: 85%;
  align-self: anchor-center;
}
.phrase, .about-img{
  font-size: 45px;
  flex: 50%;
}
.information{
  flex: 50%;
  font-size: 24px;
}
.left{
  text-align: left !important;
  padding-right: 1em;
}

.right{
  text-align: right !important;
  padding-left: 1em;
}
.listing p{
  margin-top: -.5em;
}
.info-header{
 font-size: 28px;
 font-weight: 600;
}
#contact {
  position: relative;
  height: 100%;
  margin-top: 10%;
  padding-top: 1em;
  display:flex;
  flex-direction: row;
  align-items: top;
  align-content: stretch;
  color: black;
  width: 85%;
  align-self: anchor-center;
}
.form {
  position: relative;
  flex: 50%;
}
.picture {
  font-size: 45px;
  flex: 50%;
}
.picture img, .about-img img, .service-img img {
  width: 100%;
  height: auto;
  right: 0;
  max-height: 483px;
}

.align-center {
  text-align: center;
}
html {
  height: 100%;
}
body {
  height: 100%;
  position: relative;
}

.content-wrapper {
  min-height: 100%;
  position: relative;
}
.contact-form .form-field {
  position: relative;
  margin: 32px 0;
  border-radius: none;
}
.contact-form .input-text {
  width: 90%;
  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
  font-size: 18px;
  line-height: 26px;
  font-weight: 400;
  background-color: whitesmoke;
  
  padding:15px 10px;
  outline:none;
  border:1px solid rgb(255, 137, 2);
  display:inline-block;
  -webkit-box-sizing:border-box;
  -moz-box-sizing:border-box;
  box-sizing:border-box;
  -webkit-transition:0.2s ease all;
  -moz-transition:0.2s ease all;
  -ms-transition:0.2s ease all;
  -o-transition:0.2s ease all;
  transition:0.2s ease all;
}

.contact-form .input-text:focus, .contact-form .input-text:hover {
  outline: none;
  border:3px solid rgb(255, 137, 2);
}
.contact-form .input-text:focus + .label,
.contact-form .input-text.not-empty + .label {
  transform: translateY(-24px);
}
.contact-form .label {
  position: absolute;
  left: 20px;
  bottom: 11px;
  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
  font-size: 18px;
  line-height: 26px;
  font-weight: 400;
  color: rgb(255, 137, 2);
  cursor: text;
  transition: transform 0.2s ease-in-out;
}
.contact-form .submit-btn {
  display: inline-block;
  background-color: #000;
  color: whitesmoke;
  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 16px;
  line-height: 24px;
  padding: 8px 16px;
  border: none;
  cursor: pointer;
  border-radius: none;
}

*, *::before, *::after {
  box-sizing: border-box;
}

/*Footer*/
footer{
  background-color: hsl(60, 10%, 10%);;
  color: rgb(239, 239, 239);
  padding: 1em;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  flex-direction: column;
}
footer p{
  margin: .5em;
}

@media only screen and (max-width: 950px) {
  header{
    height: 100vh;
  }
  header::before {
    bottom: 0;
    content: "";
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    display: block;
    background-image: url(asset/background_new.jpg);
    background-size: cover;
    -webkit-transform-origin: none;
    -webkit-transform: none;
    transform-origin: none;
    transform: none;
    z-index: -1;
    min-height: 100vh;
  }
  body {
    overflow-x: hidden;
  }
  .logo{
    display:none;
  }
  .logo1 {
    display:inline;
    position:relative;
    width: 275px;
    height: auto;
  }
  .button img {
    width: 30px;
  
  }
  .container{
    margin-top: 140%;
  }
  #about {
    position: relative;
    height: 100%;
    display:flex;
    justify-content: center;
    align-items: center;
    color: black;
  }
  .TCwords {
    display:none;
  }
  .TCdef {
    display: none;
  }
  .vl {
    display: none;
  }
  .menu {
    display: none;
  }
  .left, .right {
    text-align: center !important;
    padding-right: 0;
    padding-left: 0;
  }
  #services, #contact, #about {
    flex-direction: column;
    flex-wrap: wrap;
    padding-top: 0;
  }
  #contact{
    margin-top: 0;
  }
  .listing p{
    margin-top: -.5em;
  }
  .listing p:last-child{
    margin-bottom: 1.5em;
  }
}

